src/objects/Legal_Doc__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Legal Docs</relationshipLabel>
        <relationshipName>Legal_Docs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addendum_Status__c</fullName>
        <description>Pending addendum status goes here.</description>
        <label>Is this an Addendum or Amendment?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Addendum</fullName>
                </value>
                <value>
                    <fullName>Amendment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Agreement__c</fullName>
        <description>Base agreement goes here.</description>
        <label>Base Agreement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Legal notes go here.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMC Addendum</fullName>
                </value>
                <value>
                    <fullName>Eval Agreement</fullName>
                </value>
                <value>
                    <fullName>MOA</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>Participation Agreement</fullName>
                </value>
                <value>
                    <fullName>Pivotal Channel Partner</fullName>
                </value>
                <value>
                    <fullName>Pivotal Channel Partner Plus</fullName>
                </value>
                <value>
                    <fullName>PSA</fullName>
                </value>
                <value>
                    <fullName>SLA</fullName>
                </value>
                <value>
                    <fullName>Subcontractor Agreement</fullName>
                </value>
                <value>
                    <fullName>Third Party Addendum to MOA</fullName>
                </value>
                <value>
                    <fullName>Pivotal Partner Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>This is for legal to manage paperwork.</description>
    <label>Legal Doc</label>
    <nameField>
        <displayFormat>LD-{000000}</displayFormat>
        <label>Legal Doc Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Legal_Docs</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Addendum_Status__c</columns>
        <columns>Base_Agreement__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Legal Docs</label>
    </listViews>
</CustomObject>